load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")
load("//bazel:codegen.bzl", "codegen_rule")

package(default_visibility = ["//visibility:public"])

exports_files(glob(
    ["**"],
    exclude = ["*.generated.*"],
))

filegroup(
    name = "core",
    srcs = glob(
        ["**"],
        exclude = ["*.generated.*"],
    ),
)

config_setting(
    name = "windows",
    constraint_values = ["@platforms//os:windows"],
)

COMMON_COPTS = [
    "-std=c11",
    "-Wall",
    "-Wextra",
    "-Wpedantic",
    "-Wstrict-prototypes",
    "-Werror",
]

MSVC_COPTS = [
    "/std:c11",
    "/experimental:c11atomics",
    "/W4",
    "/WX",
    "/wd4100",  # unreferenced formal parameter
    "/wd4200",  # nonstandard extension used: zero-sized array in struct/union
    "/wd4201",  # nonstandard extension used: nameless struct/union
    "/wd4204",  # nonstandard extension used: non-constant aggregate initializer
    "/wd4214",  # nonstandard extension used: bit field types other than int
    "/wd4456",  # declaration hides previous local declaration
]

COPTS = select({
    ":windows": MSVC_COPTS,
    "//conditions:default": COMMON_COPTS,
})

POSIX_PTHREAD_FLAGS = select({
    ":windows": [],
    "//conditions:default": [
        "-pthread",
        "-D_POSIX_C_SOURCE=200809L",
        "-D_GNU_SOURCE",
    ],
})

HOST_PLATFORM_SRCS = select({
    ":windows": ["host_platform_windows.c"],
    "//conditions:default": ["host_platform_posix.c"],
})

WIN32_LIBS = select({
    ":windows": ["@msvc_toolchains//lib:kernel32"],
    "//conditions:default": [],
})

cc_library(
    name = "util",
    srcs = ["util.c"],
    hdrs = ["util.h"],
    copts = COPTS,
    features = ["-coverage"],
    tags = ["no-coverage"],
    deps = WIN32_LIBS,
)

cc_library(
    name = "arena_runtime",
    srcs = [
        "arena.c",
    ] + HOST_PLATFORM_SRCS,
    hdrs = [
        "arena.h",
        "host_platform.h",
    ],
    copts = COPTS + POSIX_PTHREAD_FLAGS,
    features = ["-coverage"],
    includes = ["."],
    tags = ["no-coverage"],
    deps = WIN32_LIBS,
)

cc_library(
    name = "ski_io",
    srcs = ["ski_io.c"],
    hdrs = ["ski_io.h"],
    copts = COPTS,
    features = ["-coverage"],
    tags = ["no-coverage"],
    deps = [
        ":arena_runtime",
        ":util",
    ],
)

cc_library(
    name = "trip_runtime_io",
    srcs = ["trip_runtime.c"],
    hdrs = ["trip_runtime.h"],
    copts = COPTS,
    features = ["-coverage"],
    tags = ["no-coverage"],
)

cc_library(
    name = "thanatos_lib",
    srcs = [
        "session.c",
        "thanatos.c",
    ],
    hdrs = [
        "session.h",
        "thanatos.h",
    ],
    copts = COPTS + POSIX_PTHREAD_FLAGS,
    features = ["-coverage"],
    tags = ["no-coverage"],
    deps = [
        ":arena_runtime",
        ":ski_io",
        ":util",
    ],
)

cc_binary(
    name = "thanatos",
    srcs = ["main.c"],
    copts = COPTS + POSIX_PTHREAD_FLAGS,
    features = ["-coverage"],
    linkopts = POSIX_PTHREAD_FLAGS,
    linkstatic = 1,
    tags = ["no-coverage"],
    deps = [":thanatos_lib"],
)

cc_test(
    name = "arena_test",
    srcs = ["arena_test.c"],
    copts = COPTS + POSIX_PTHREAD_FLAGS,
    features = ["-coverage"],
    linkopts = POSIX_PTHREAD_FLAGS,
    linkstatic = 1,
    tags = ["no-coverage"],
    deps = [
        ":arena_runtime",
        ":ski_io",
    ],
)

cc_test(
    name = "dag_codec_test",
    srcs = ["dag_codec_test.c"],
    copts = COPTS + POSIX_PTHREAD_FLAGS,
    features = ["-coverage"],
    linkopts = POSIX_PTHREAD_FLAGS,
    linkstatic = 1,
    tags = ["no-coverage"],
    deps = [
        ":arena_runtime",
        ":ski_io",
        ":util",
    ],
)

cc_test(
    name = "session_test",
    srcs = ["session_test.c"],
    copts = COPTS + POSIX_PTHREAD_FLAGS,
    features = ["-coverage"],
    linkopts = POSIX_PTHREAD_FLAGS,
    linkstatic = 1,
    tags = ["no-coverage"],
    deps = [":thanatos_lib"],
)

cc_test(
    name = "ski_io_test",
    srcs = ["ski_io_test.c"],
    copts = COPTS + POSIX_PTHREAD_FLAGS,
    features = ["-coverage"],
    linkopts = POSIX_PTHREAD_FLAGS,
    linkstatic = 1,
    tags = ["no-coverage"],
    deps = [":thanatos_lib"],
)

cc_test(
    name = "util_test",
    srcs = ["util_test.c"],
    copts = COPTS,
    features = ["-coverage"],
    linkstatic = 1,
    tags = ["no-coverage"],
    deps = [":util"],
)

cc_binary(
    name = "performance_test",
    srcs = ["performance_test.c"],
    copts = COPTS + POSIX_PTHREAD_FLAGS,
    features = ["-coverage"],
    linkopts = POSIX_PTHREAD_FLAGS,
    linkstatic = 1,
    tags = ["no-coverage"],
    deps = [":thanatos_lib"],
)
