package(default_visibility = ["//visibility:public"])

exports_files(glob(["**"], exclude = ["*.generated.*"]))

filegroup(
    name = "scripts",
    srcs = glob(["**"], exclude = ["*.generated.*"]),
)

filegroup(
    name = "generate_layouts_runner",
    srcs = ["generate_layouts_runner.sh"],
)

filegroup(
    name = "generate_version_runner",
    srcs = ["generate_version_runner.sh"],
)
