load("@aspect_rules_js//js:defs.bzl", "js_library")
load("//bazel:codegen.bzl", "codegen_rule")

package(default_visibility = ["//visibility:public"])

exports_files(glob(["**"], exclude = ["*.generated.*"]))

filegroup(
    name = "shared",
    srcs = glob(["**"], exclude = ["*.generated.*"]),
)

codegen_rule(
    name = "version_generated_src",
    args = [
        "--package-json",
        "$(location //:package.json)",
        "--ts-out",
        "$(location version.generated.ts)",
        "--js-out",
        "$(location version.generated.js)",
    ],
    data = ["//:package.json"],
    # Emit both .ts (for editor / sync-generated verification) and .js (for
    # runtime — copied into ts_out as a data file by ts_compile, removing
    # any reliance on the TypeScript compiler to compile the generated .ts
    # file across sandboxes).
    outs = [
        "version.generated.ts",
        "version.generated.js",
    ],
    script = "//scripts:generate_version.mjs",
)

js_library(
    name = "version_generated",
    srcs = [":version.generated.ts"],
)
